--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             audio.play();
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwjNkVZ0mr30RDn-X84NCq7QbfHvUCxMI&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=key&libraries=places&callback=initMap" async defer></script>
 </body>
 </html>
 
